# mesoSPIM-control

./: .buildinfo  .gitattributes  .gitignore  AGENTS.md  CHANGELOG-TEST.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.html  CONTRIBUTING.md  MANIFEST.in  PERFORMANCE_ANALYSIS.md  README.html  README.md  ROADMAP.md  changelog.html  classes_mesoSPIM.mmd  configuration.html  contributing.html  file_formats.html  genindex.html  getting_started.html  hardware.html  image_processors.html  index.html  installation.html  mesoSPIM-control.py  mesoSPIM_Control.py  objects.inv  plugins.html  psf_analysis.html  py-modindex.html  pyproject.toml  requirements-anaconda.txt  requirements-clean-python.txt  requirements-conda-mamba.txt  search.html  searchindex.js  start_mesoSPIM.bat  timelapse.html  user_guide.html
.doctrees/: CONTRIBUTING.doctree  README.doctree  changelog.doctree  configuration.doctree  contributing.doctree  environment.pickle  file_formats.doctree  getting_started.doctree  hardware.doctree  image_processors.doctree  index.doctree  installation.doctree  plugins.doctree  psf_analysis.doctree  timelapse.doctree  user_guide.doctree
.doctrees/api/: index.doctree  mesoSPIM.doctree  mesoSPIM.src.devices.cameras.doctree  mesoSPIM.src.devices.cameras.hamamatsu.doctree  mesoSPIM.src.devices.doctree  mesoSPIM.src.devices.filter_wheels.ZWO_EFW.doctree  mesoSPIM.src.devices.filter_wheels.doctree  mesoSPIM.src.devices.joysticks.doctree  mesoSPIM.src.devices.lasers.doctree  mesoSPIM.src.devices.servos.doctree  mesoSPIM.src.devices.shutters.doctree  mesoSPIM.src.doctree  (+12 more)
_modules/: index.html
_sources/: configuration.rst.txt  getting_started.rst.txt  hardware.rst.txt  index.rst.txt  plugins.rst.txt  timelapse.rst.txt
api/: index.html  mesoSPIM.html  mesoSPIM.src.devices.cameras.hamamatsu.html  mesoSPIM.src.devices.cameras.html  mesoSPIM.src.devices.filter_wheels.ZWO_EFW.html  mesoSPIM.src.devices.filter_wheels.html  mesoSPIM.src.devices.html  mesoSPIM.src.devices.joysticks.html  mesoSPIM.src.devices.lasers.html  mesoSPIM.src.devices.servos.html  mesoSPIM.src.devices.shutters.html  mesoSPIM.src.devices.stages.asi.html  mesoSPIM.src.devices.stages.galil.html  mesoSPIM.src.devices.stages.html  mesoSPIM.src.html  mesoSPIM.src.plugins.ImageWriters.html  mesoSPIM.src.plugins.html  mesoSPIM.src.plugins.support_files.ImageWriters.OmeZarrWriter.html  mesoSPIM.src.plugins.support_files.ImageWriters.OmeZarrWriterMP.html  mesoSPIM.src.plugins.support_files.ImageWriters.html  mesoSPIM.src.plugins.support_files.html  mesoSPIM.src.utils.html  mesoSPIM.test.html  modules.html
docs/: Makefile  README.md  build_log.txt  classes_mesoSPIM.mmd  make.bat  packages_mesoSPIM.mmd  readme.md
gui/: gui.ui
mesoSPIM/: .gitignore  buglist.txt  mesoSPIM-shortcut.lnk  mesoSPIM.bat  mesoSPIM_Control.py  mesoSPIM_control.py  optimizer-notes.txt  start_mesoSPIM-shortcut.lnk  start_mesoSPIM.bat
scripts/: inject_mermaid.py
src/: window.py
(+422 files in other folders)
