# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mesospim-control"
version = "1.0.4"

description = "mesoSPIM microscope control"
readme = "README.md"
license = { file = "LICENSE" }

dependencies = [
    "numpy>=1.17.0",
    "scipy==1.2.1",
    "PyQt5==5.13.1",
    "PyQt5-sip==12.7.0",
    "nidaqmx==0.5.7",
    "indexed==1.2.1",
    "pipython==2.5.1.3",
    "pyserial==3.4",
    "pyqtgraph>=0.12.3",
    "pywinusb==0.4.2",
    "tifffile==2021.7.2",
    "qdarkstyle==2.8.1",
    "npy2bdv==1.0.7",
    "future==0.18.2",
]

requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/mesoSPIM/mesoSPIM-control"

[project.scripts]
mesospim-control = "mesoSPIM.mesoSPIM_Control:run"
mesospim = "mesoSPIM.mesoSPIM_Control:run"