# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mesospim-control"
version = "1.8.1"
authors = [{ name = "Nikita Vladimirov", email = "vladimirov@hifo.uzh.ch" }, { name = "Fabian Voigt", email = "fvoigt@fas.harvard.edu" },]
description = "mesoSPIM microscope control"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.7"

dependencies = [
    "numpy>=1.17.0",
    "scipy==1.2.1",
    "PyQt5==5.13.1",
    "PyQt5-sip==12.7.0",
    "nidaqmx==0.5.7",
    "indexed==1.2.1",
    "pipython==2.5.1.3",
    "pyserial==3.4",
    "pyqtgraph>=0.12.3",
    "pywinusb==0.4.2",
    "tifffile==2021.7.2",
    "qdarkstyle==2.8.1",
    "npy2bdv>=1.0.8",
    "future==0.18.2",
]

[project.urls]
"Homepage" = "http://mesospim.org"
"Source code" = "https://github.com/mesoSPIM/mesoSPIM-control"

[project.scripts]
mesospim-control = "mesoSPIM.mesoSPIM_Control:run"