# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mesospim-control"
version = "1.10.2"
authors = [{ name = "Nikita Vladimirov", email = "vladimirov@hifo.uzh.ch" }, { name = "Fabian Voigt", email = "fvoigt@fas.harvard.edu" },]
description = "mesoSPIM microscope control"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.12"

dependencies = [
    "numpy==2.1.2",
    "scipy==1.14.1",
    "PyQt5==5.15.11",
    "PyQt5-sip==12.15.0",
    "nidaqmx==1.0.1",
    "indexed==1.3.0",
    "pipython==2.10.2.1",
    "pyserial==3.5",
    "pyqtgraph>=0.13.7",
    "pywinusb==0.4.2",
    "tifffile==2024.9.20",
    "qdarkstyle==2.8.1",
    "npy2bdv==1.0.8",
    "future==1.0.0",
    "matplotlib==3.9.2"
]

[project.urls]
"Homepage" = "http://mesospim.org"
"Source code" = "https://github.com/mesoSPIM/mesoSPIM-control"

[project.scripts]
mesospim-control = "mesoSPIM.mesoSPIM_Control:run"
